[package]
name = "mannhattan-banana-peel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
rive = "=1.2.0"
rive-cache-inmemory = "1.0.0"
tokio = { version="1.36.0", features=["full"] }
